--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link href="//fonts.googleapis.com/css?family=Orbitron" rel="stylesheet" />
     <link href='//fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css' />
     <link href="./dist/styles.css" rel="stylesheet" type="text/css" />
+    <link href="./node_modules/react-select/dist/react-select.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <!-- <script src="es6-shim.js"></script>
-    <script src="fetch.js"></script> -->
 </head>
 
 <body>
